wayland: Fix focused surface check in wl_data_device.start_drag

SeatInterface::focusedPointerSurface() contains the main surface, but the
client can specify a subsurface.

BUG: 497031